--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "kawio"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "kawio"
+
+[[bin]]
+name = "kawio"
+path = "src/main.rs"
+
 [dependencies]
 axum = "0.7"
 tokio = { version = "1", features = ["full"] }
@@ -12,4 +19,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 rusqlite = { version = "0.31", features = ["bundled"] }
 rand = "0.8"
+
+[dev-dependencies]
+tower = { version = "0.4", features = ["util"] }
 
