--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "kawio"
 path = "src/main.rs"
 
 [dependencies]
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -19,7 +19,9 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 rusqlite = { version = "0.31", features = ["bundled"] }
 rand = "0.8"
+futures-util = { version = "0.3", features = ["sink"] }
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
+criterion = "0.5"
 
