--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ tracing-subscriber = "0.3"
 rusqlite = { version = "0.31", features = ["bundled"] }
 rand = "0.8"
 futures-util = { version = "0.3", features = ["sink"] }
+jsonwebtoken = "9.0"
+tower-http = { version = "0.5", features = ["fs"] }
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
