--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.8"
 futures-util = { version = "0.3", features = ["sink"] }
 jsonwebtoken = "9.0"
 tower-http = { version = "0.5", features = ["fs"] }
+clap = { version = "4.0", features = ["derive"] }
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
